# weather

./: README.md  pyproject.toml
weather/: cli.py
